--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Định nghĩa font-family */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-ibm-mono: "IBM Plex Mono", monospace;
+  --font-ibm-sans: "IBM Plex Sans", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* Mặc định sử dụng font sans */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-ibm-sans), sans-serif;
+}
+
+/* Khi cần dùng Mono */
+.font-mono {
+  font-family: var(--font-ibm-mono), monospace;
+}
+
+/* Khi cần dùng Sans */
+.font-sans {
+  font-family: var(--font-ibm-sans), sans-serif;
 }
